--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@thirdweb-dev/react": "^3.9.2",
     "@thirdweb-dev/sdk": "^3.9.2",
+    "firebase": "^9.17.2",
     "framer-motion": "^9.0.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
